# geo2-ip-webserver

./: .gitattributes  .gitignore  README.md  docker-compose.yml  playwright.config.ts  pyproject.toml  pytest.ini
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/1/: PLAN.md  RESEARCH.md  SUMMARY.md  VERIFICATION.md
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: audit.py  auth.py  content.py  geofences.py  ip_rules.py  public.py  site_users.py  sites.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py
backend/app/services/: access_control.py  audit_log.py  content.py  geofence.py  ip_geo.py  ip_rules.py  screenshot.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/pages/: AuditLogs.tsx  Login.tsx  SiteContent.tsx  SiteDetail.tsx  SiteUsers.tsx  Sites.tsx  Users.tsx
frontend/src/services/: api.ts
frontend/src/store/: auth.ts
tests/e2e/: test_api.spec.ts
tests/unit/: test_access_control.py  test_audit_log.py  test_auth.py  test_content_access.py  test_geofence.py  test_ip_rules.py  test_public_access.py
