[tool.poetry]
name = "geo2-ip-webserver"
version = "0.1.0"
description = "Multi-site webserver with geo and IP access control"
authors = ["Developer"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "[bcrypt]" 
python-multipart = "^0.0.6"
redis = "^5.0.1"
aiohttp = "^3.9.1"
maxminddb = "^2.4.0"
playwright = "^1.41.0"
httpx = "^0.26.0"
leaflet = "^0.0.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3
pytest-cov = "^4.1.0
black = "^24.1.1
ruff = "^0.1.9

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
